@@ -6,6 +6,7 @@ Bugs fixed:
 - 3086145 check datetime format in chars2bin
 - 3095884 Indication classes missing SystemName
 - 3101155 Failed to load provider libraries due to symbol conflicts
+- 3101148 SfcbLocal method parameter type conversion and validation
 
 Changes in 1.3.9
 ================
